[gd_scene load_steps=12 format=3 uid="uid://cy8tuhs3abgx2"]

[ext_resource type="Texture2D" uid="uid://l40mlbkfsrje" path="res://assets/icons/Numbers Separated/Number1.png" id="1_dsfdi"]
[ext_resource type="Script" path="res://scenes/ui/action_wheel/action_wheel.gd" id="1_wdfaa"]
[ext_resource type="Texture2D" uid="uid://cywh4gsdtpkgq" path="res://assets/icons/Numbers Separated/Number2.png" id="2_0hfjv"]
[ext_resource type="Texture2D" uid="uid://bttnl6ba2cb5p" path="res://assets/icons/Icons Separated/Icon19.png" id="2_schf7"]
[ext_resource type="Texture2D" uid="uid://0mmjo00our67" path="res://assets/icons/Numbers Separated/Number3.png" id="3_hwnaj"]
[ext_resource type="Texture2D" uid="uid://q4ibikn7tm6n" path="res://assets/icons/Numbers Separated/Number4.png" id="4_a2akq"]
[ext_resource type="Texture2D" uid="uid://hv73jff0r1pc" path="res://assets/icons/Icons Separated/Icon20.png" id="4_n3qlj"]
[ext_resource type="Texture2D" uid="uid://21i6qwsuiqal" path="res://assets/icons/Icons Separated/Icon21.png" id="6_lk1yl"]
[ext_resource type="Texture2D" uid="uid://dth06vfn2nmaw" path="res://assets/checkmark-ui-icon.png" id="7_218rs"]
[ext_resource type="Texture2D" uid="uid://bdw45r6jootuu" path="res://assets/icons/Icons Separated/Icon22.png" id="8_uvu8t"]
[ext_resource type="Texture2D" uid="uid://kkpf7jqy70rf" path="res://assets/icons/Numbers Separated/Number5.png" id="8_v8yu5"]

[node name="ActionWheel" type="VBoxContainer"]
z_index = 20
z_as_relative = false
offset_left = 8.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 66.0
scale = Vector2(0.5, 0.5)
script = ExtResource("1_wdfaa")

[node name="ActionWheel" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"PanelContainer4"

[node name="Label" type="Label" parent="ActionWheel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "press 1, 2, 3 to choose ability"
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Icon1" type="TextureButton" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_schf7")

[node name="Number1" type="TextureButton" parent="HBoxContainer2/Icon1"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 14.0
offset_top = -7.0
offset_right = 30.0
offset_bottom = 9.0
texture_normal = ExtResource("1_dsfdi")

[node name="Icon2" type="TextureButton" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("4_n3qlj")

[node name="Number2" type="TextureButton" parent="HBoxContainer2/Icon2"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 14.0
offset_top = -7.0
offset_right = 30.0
offset_bottom = 9.0
texture_normal = ExtResource("2_0hfjv")

[node name="Icon3" type="TextureButton" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("6_lk1yl")

[node name="Number3" type="TextureButton" parent="HBoxContainer2/Icon3"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 14.0
offset_top = -7.0
offset_right = 30.0
offset_bottom = 9.0
texture_normal = ExtResource("3_hwnaj")

[node name="Icon4" type="TextureButton" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("8_uvu8t")

[node name="Number4" type="TextureButton" parent="HBoxContainer2/Icon4"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 14.0
offset_top = -7.0
offset_right = 30.0
offset_bottom = 9.0
texture_normal = ExtResource("4_a2akq")

[node name="EndTurnContainer" type="MarginContainer" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = -2
theme_override_constants/margin_top = -7

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer2/EndTurnContainer"]
layout_mode = 2
theme_type_variation = &"PanelContainer4"

[node name="Icon5" type="TextureButton" parent="HBoxContainer2/EndTurnContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("7_218rs")

[node name="Number5" type="TextureButton" parent="HBoxContainer2/EndTurnContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("8_v8yu5")
